force-app/main/default/objects/Maintenance_Check__c/Maintenance_Check__c.object-meta.xml
<CustomObject>
    <label>Maintenance Check</label>
    <nameField>
        <displayFormat>Maint-{0000}</displayFormat>
        <label>Maintenance Check No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maintenance Checks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>