force-app/main/default/objects/Maintenance_Check__c/fields/Aircraft_Papers_Check__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Papers_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aircraft Papers Check</label>
    <type>Checkbox</type>
</CustomField>