force-app/main/default/objects/Maintenance_Check__c/fields/Cabin_Check__c.field-meta.xml
<CustomField>
    <fullName>Cabin_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cabin Check</label>
    <type>Checkbox</type>
</CustomField>