force-app/main/default/objects/Maintenance_Check__c/fields/Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed__c</fullName>
    <label>Date Completed</label>
    <required>true</required>
    <type>Date</type>
</CustomField>