force-app/main/default/objects/Maintenance_Check__c/fields/Doors_Check__c.field-meta.xml
<CustomField>
    <fullName>Doors_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Doors Check</label>
    <type>Checkbox</type>
</CustomField>