force-app/main/default/objects/Maintenance_Check__c/fields/Engine_Observations__c.field-meta.xml
<CustomField>
    <fullName>Engine_Observations__c</fullName>
    <label>Engine Observations</label>
    <type>TextArea</type>
</CustomField>