force-app/main/default/objects/Maintenance_Check__c/fields/Engine_Oil_Level__c.field-meta.xml
<CustomField>
    <fullName>Engine_Oil_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engine Oil Level</label>
    <type>Checkbox</type>
</CustomField>