force-app/main/default/objects/Maintenance_Check__c/fields/External_Body_Damage_Check__c.field-meta.xml
<CustomField>
    <fullName>External_Body_Damage_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Body Damage Check</label>
    <type>Checkbox</type>
</CustomField>