force-app/main/default/objects/Maintenance_Check__c/fields/Fuel_Level__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Level__c</fullName>
    <label>Fuel Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>