force-app/main/default/objects/Maintenance_Check__c/fields/General_Observations__c.field-meta.xml
<CustomField>
    <fullName>General_Observations__c</fullName>
    <label>General Observations</label>
    <type>TextArea</type>
</CustomField>