force-app/main/default/objects/Maintenance_Check__c/fields/Landing_Gear_Check__c.field-meta.xml
<CustomField>
    <fullName>Landing_Gear_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Landing Gear Check</label>
    <type>Checkbox</type>
</CustomField>