force-app/main/default/objects/Maintenance_Check__c/fields/Oil_Filter__c.field-meta.xml
<CustomField>
    <fullName>Oil_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oil Filter</label>
    <type>Checkbox</type>
</CustomField>