force-app/main/default/objects/Maintenance_Check__c/fields/Plane__c.field-meta.xml
<CustomField>
    <fullName>Plane__c</fullName>
    <label>Plane</label>
    <referenceTo>Plane__c</referenceTo>
    <relationshipLabel>Maintenance Checks</relationshipLabel>
    <relationshipName>Maintenance_Checks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>