force-app/main/default/objects/Maintenance_Check__c/fields/Propeller_Cracks__c.field-meta.xml
<CustomField>
    <fullName>Propeller_Cracks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Propeller Cracks</label>
    <type>Checkbox</type>
</CustomField>