force-app/main/default/objects/Maintenance_Check__c/fields/Propeller_Rotation__c.field-meta.xml
<CustomField>
    <fullName>Propeller_Rotation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Propeller Rotation</label>
    <type>Checkbox</type>
</CustomField>