force-app/main/default/objects/Maintenance_Check__c/fields/Wings_Check__c.field-meta.xml
<CustomField>
    <fullName>Wings_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wings Check</label>
    <type>Checkbox</type>
</CustomField>